[project]
name = "fest-vibes-ai-etl-pipeline"
version = "0.0.17"
description = "ETL Pipeline for Festival and Events Data Processing"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "pytz",
    "redis",
    "psycopg2-binary",
    "python-dotenv",
    "aiohttp",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "sentence-transformers",
    "pgvector",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest-mock",
    "types-pytz",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
